# masbiomasa-core

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  manage.py  pyproject.toml
masbiomasa/: asgi.py  settings.py  urls.py  wsgi.py
masbiomasa/apps/carbon_capture/: admin.py  apps.py  classification.py  models.py  views.py
masbiomasa/apps/carbon_capture/management/commands/: ndvi.py
masbiomasa/apps/carbon_capture/migrations/: 0001_initial.py  0002_calculation_satellite_image.py
